tests/reference/run-implied_do_loop1-1d0df34.stderr
semantic error: The loop variable 'i' is not declared
 --> tests/implied_do_loop1.f90:6:10
  |
6 | print *, (i, A(i), i = 1, 2)
  |          ^^^^^^^^^^^^^^^^^^^ 
